Added a link for downloading the `marketing_campaign.csv`

--- a/01-initial-model/data-generation.ipynb
+++ b/01-initial-model/data-generation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## About\n",
     "\n",
-    "This notebook provides a demonstration of how the training and test data was generated from the marketing_campaign.csv.\n",
+    "This notebook provides a demonstration of how the training and test data was generated from the [marketing_campaign.csv](https://raw.githubusercontent.com/Demiga-g/iFood-Marketing-Analysis/main/marketing_campaign.csv).\n",
     "\n",
     "### Downloading the data\n",
     "\n",
